SampleCode/SUSIDemo_C/Susi4.h


typedef uint32_t SusiStatus_t;
typedef uint32_t SusiId_t;
#define SUSI_STATUS_NOT_INITIALIZED				((SusiStatus_t)0xFFFFFFFF)
#define SUSI_STATUS_INITIALIZED					((SusiStatus_t)0xFFFFFFFE)
#define SUSI_STATUS_ALLOC_ERROR					((SusiStatus_t)0xFFFFFFFD)
#define SUSI_STATUS_DRIVER_TIMEOUT				((SusiStatus_t)0xFFFFFFFC)
#define SUSI_STATUS_INVALID_PARAMETER			((SusiStatus_t)0xFFFFFEFF)
#define SUSI_STATUS_INVALID_BLOCK_ALIGNMENT		((SusiStatus_t)0xFFFFFEFE)
#define SUSI_STATUS_INVALID_BLOCK_LENGTH		((SusiStatus_t)0xFFFFFEFD)
#define SUSI_STATUS_INVALID_DIRECTION			((SusiStatus_t)0xFFFFFEFC)
#define SUSI_STATUS_INVALID_BITMASK				((SusiStatus_t)0xFFFFFEFB)
#define SUSI_STATUS_RUNNING						((SusiStatus_t)0xFFFFFEFA)
#define SUSI_STATUS_UNSUPPORTED					((SusiStatus_t)0xFFFFFCFF)
#define SUSI_STATUS_NOT_FOUND					((SusiStatus_t)0xFFFFFBFF)
#define SUSI_STATUS_TIMEOUT						((SusiStatus_t)0xFFFFFBFE)
#define SUSI_STATUS_BUSY_COLLISION				((SusiStatus_t)0xFFFFFBFD)
#define SUSI_STATUS_READ_ERROR					((SusiStatus_t)0xFFFFFAFF)
#define SUSI_STATUS_WRITE_ERROR					((SusiStatus_t)0xFFFFFAFE)
#define SUSI_STATUS_MORE_DATA					((SusiStatus_t)0xFFFFF9FF)
#define SUSI_STATUS_ERROR						((SusiStatus_t)0xFFFFF0FF)
#define SUSI_STATUS_SUCCESS						((SusiStatus_t)0)
SusiStatus_t SUSI_API SusiLibInitialize(void);
SusiStatus_t SUSI_API SusiLibUninitialize(void);
#define SUSI_ID_GET_SPEC_VERSION				((SusiId_t)0x00000000)
#define SUSI_ID_BOARD_BOOT_COUNTER_VAL			((SusiId_t)0x00000001)		
#define SUSI_ID_BOARD_RUNNING_TIME_METER_VAL	((SusiId_t)0x00000002)		
#define SUSI_ID_BOARD_PNPID_VAL					((SusiId_t)0x00000003)
#define SUSI_ID_BOARD_PLATFORM_REV_VAL			((SusiId_t)0x00000004)
#define SUSI_ID_BOARD_LAST_SHUTDOWN_STATUS_VAL	((SusiId_t)0x00000005)
#define SUSI_ID_BOARD_LAST_SHUTDOWN_EVENT_VAL	((SusiId_t)0x00000006)
#define SUSI_ID_BOARD_DRIVER_VERSION_VAL		((SusiId_t)0x00010000)
#define SUSI_ID_BOARD_LIB_VERSION_VAL			((SusiId_t)0x00010001)
#define SUSI_ID_BOARD_FIRMWARE_VERSION_VAL		((SusiId_t)0x00010002)
#define SUSI_ID_BOARD_DOCUMENT_VERSION_VAL		((SusiId_t)0x00010005)
#define SUSI_ID_HWM_TEMP_MAX					11									
#define SUSI_ID_HWM_TEMP_CPU					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 0))			
#define SUSI_ID_HWM_TEMP_CHIPSET				((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 1))			
#define SUSI_ID_HWM_TEMP_SYSTEM					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 2))			
#define SUSI_ID_HWM_TEMP_CPU2					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 3))			
#define SUSI_ID_HWM_TEMP_OEM0					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 4))			
#define SUSI_ID_HWM_TEMP_OEM1					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 5))			
#define SUSI_ID_HWM_TEMP_OEM2					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 6))			
#define SUSI_ID_HWM_TEMP_OEM3					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 7))			
#define SUSI_ID_HWM_TEMP_OEM4					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 8))			
#define SUSI_ID_HWM_TEMP_OEM5					((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 9))			
#define SUSI_ID_HWM_TEMP_SYSTEM2				((SusiId_t)(SUSI_ID_HWM_TEMP_BASE + 10))		
#define SUSI_ID_HWM_VOLTAGE_MAX					24									
#define SUSI_ID_HWM_VOLTAGE_VCORE				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 0))		
#define SUSI_ID_HWM_VOLTAGE_VCORE2				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 1))		
#define SUSI_ID_HWM_VOLTAGE_2V5					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 2))		
#define SUSI_ID_HWM_VOLTAGE_3V3					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 3))		
#define SUSI_ID_HWM_VOLTAGE_5V					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 4))		
#define SUSI_ID_HWM_VOLTAGE_12V					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 5))		
#define SUSI_ID_HWM_VOLTAGE_5VSB				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 6))		
#define SUSI_ID_HWM_VOLTAGE_3VSB				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 7))		
#define SUSI_ID_HWM_VOLTAGE_VBAT				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 8))		
#define SUSI_ID_HWM_VOLTAGE_5NV					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 9))		
#define SUSI_ID_HWM_VOLTAGE_12NV				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 10))		
#define SUSI_ID_HWM_VOLTAGE_VTT					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 11))		
#define SUSI_ID_HWM_VOLTAGE_24V					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 12))		
#define SUSI_ID_HWM_VOLTAGE_DC					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 13))		
#define SUSI_ID_HWM_VOLTAGE_DCSTBY				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 14))		
#define SUSI_ID_HWM_VOLTAGE_VBATLI				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 15))		
#define SUSI_ID_HWM_VOLTAGE_OEM0				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 16))		
#define SUSI_ID_HWM_VOLTAGE_OEM1				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 17))		
#define SUSI_ID_HWM_VOLTAGE_OEM2				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 18))		
#define SUSI_ID_HWM_VOLTAGE_OEM3				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 19))		
#define SUSI_ID_HWM_VOLTAGE_1V05				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 20))		
#define SUSI_ID_HWM_VOLTAGE_1V5					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 21))		
#define SUSI_ID_HWM_VOLTAGE_1V8					((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 22))		
#define SUSI_ID_HWM_VOLTAGE_12VS5				((SusiId_t)(SUSI_ID_HWM_VOLTAGE_BASE + 23))		
#define SUSI_ID_HWM_FAN_MAX						13									
#define SUSI_ID_HWM_FAN_CPU						((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 0))			
#define SUSI_ID_HWM_FAN_SYSTEM					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 1))			
#define SUSI_ID_HWM_FAN_CPU2					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 2))			
#define SUSI_ID_HWM_FAN_OEM0					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 3))			
#define SUSI_ID_HWM_FAN_OEM1					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 4))			
#define SUSI_ID_HWM_FAN_OEM2					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 5))			
#define SUSI_ID_HWM_FAN_OEM3					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 6))			
#define SUSI_ID_HWM_FAN_OEM4					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 7))			
#define SUSI_ID_HWM_FAN_OEM5					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 8))			
#define SUSI_ID_HWM_FAN_OEM6					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 9))			
#define SUSI_ID_HWM_FAN_SYSTEM2					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 10))			
#define SUSI_ID_HWM_FAN_SYSTEM3					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 11))			
#define SUSI_ID_HWM_FAN_SYSTEM4					((SusiId_t)(SUSI_ID_HWM_FAN_BASE + 12))			
#define SUSI_ID_HWM_CURRENT_MAX					3									
#define SUSI_ID_HWM_CURRENT_OEM0				((SusiId_t)(SUSI_ID_HWM_CURRENT_BASE + 0))		
#define SUSI_ID_HWM_CURRENT_OEM1				((SusiId_t)(SUSI_ID_HWM_CURRENT_BASE + 1))		
#define SUSI_ID_HWM_CURRENT_OEM2				((SusiId_t)(SUSI_ID_HWM_CURRENT_BASE + 2))		
#define SUSI_ID_HWM_CASEOPEN_MAX				3									
#define SUSI_ID_HWM_CASEOPEN_OEM0				((SusiId_t)(SUSI_ID_HWM_CASEOPEN_BASE + 0))
#define SUSI_ID_HWM_CASEOPEN_OEM1				((SusiId_t)(SUSI_ID_HWM_CASEOPEN_BASE + 1))
#define SUSI_ID_HWM_CASEOPEN_OEM2				((SusiId_t)(SUSI_ID_HWM_CASEOPEN_BASE + 2))
#define CASEOPEN_CLEAR_CMD						0x55AA55AA		
#define SUSI_ID_SMBUS_SUPPORTED					((SusiId_t)0x00030000)							
#define SUSI_SMBUS_EXTERNAL_SUPPORTED			(1 << 0)
#define SUSI_SMBUS_OEM0_SUPPORTED				(1 << 1)
#define SUSI_SMBUS_OEM1_SUPPORTED				(1 << 2)
#define SUSI_SMBUS_OEM2_SUPPORTED				(1 << 3)
#define SUSI_SMBUS_OEM3_SUPPORTED				(1 << 4)
#define SUSI_ID_I2C_SUPPORTED					((SusiId_t)0x00030100)							
#define SUSI_I2C_EXTERNAL_SUPPORTED				(1 << 0)
#define SUSI_I2C_OEM0_SUPPORTED					(1 << 1)
#define SUSI_I2C_OEM1_SUPPORTED					(1 << 2)
#define SUSI_I2C_OEM2_SUPPORTED					(1 << 3)
#define SUSI_KELVINS_OFFSET						2731
SusiStatus_t SUSI_API SusiBoardGetValue(
    SusiId_t Id,		
    uint32_t *pValue    
    );
#define SUSI_ID_GET_NAME_MASK							(0xF0000000)
#define SUSI_ID_GET_NAME_BASE(Id)						(Id & SUSI_ID_GET_NAME_MASK)
#define SUSI_ID_BASE_GET_NAME_HWM						(0x00000000)
#define SUSI_ID_BASE_GET_NAME_HWM_FANCONTROL			(0x10000000)
#define SUSI_ID_BASE_GET_NAME_I2C						(0x20000000)
#define SUSI_ID_BASE_GET_NAME_SMB						(0x30000000)
#define SUSI_ID_BASE_GET_NAME_GPIO						(0x40000000)
#define SUSI_ID_BASE_GET_NAME_WDT						(0x50000000)
#define SUSI_ID_BASE_GET_NAME_VGA_BACKLIGHT				(0x60000000)
#define SUSI_ID_BASE_GET_NAME_STORAGE					(0x70000000)
#define SUSI_ID_BASE_GET_NAME_TML						(0x80000000)
#define SUSI_ID_BASE_GET_NAME_INFO						(0x90000000)
#define SUSI_ID_MAPPING_GET_NAME_HWM(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_HWM))
#define SUSI_ID_MAPPING_GET_NAME_HWM_FANCONTROL(Id)		((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_HWM_FANCONTROL))
#define SUSI_ID_MAPPING_GET_NAME_I2C(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_I2C))
#define SUSI_ID_MAPPING_GET_NAME_SMB(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_SMB))
#define SUSI_ID_MAPPING_GET_NAME_GPIO(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_GPIO))
#define SUSI_ID_MAPPING_GET_NAME_WDT(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_WDT))
#define SUSI_ID_MAPPING_GET_NAME_VGA_BACKLIGHT(Id)		((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_VGA_BACKLIGHT))
#define SUSI_ID_MAPPING_GET_NAME_STORAGE(Id)			((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_STORAGE))
#define SUSI_ID_MAPPING_GET_NAME_TML(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_TML))
#define SUSI_ID_MAPPING_GET_NAME_INFO(Id)				((SusiId_t)(Id | SUSI_ID_BASE_GET_NAME_INFO))
#define SUSI_ID_BOARD_MANUFACTURER_STR					((SusiId_t)0)
#define SUSI_ID_BOARD_NAME_STR							((SusiId_t)1)
#define SUSI_ID_BOARD_REVISION_STR						((SusiId_t)2)
#define SUSI_ID_BOARD_SERIAL_STR						((SusiId_t)3)
#define SUSI_ID_BOARD_BIOS_REVISION_STR					((SusiId_t)4)
#define SUSI_ID_BOARD_HW_REVISION_STR					((SusiId_t)5)
#define SUSI_ID_BOARD_PLATFORM_TYPE_STR					((SusiId_t)6)
#define SUSI_ID_BOARD_EC_FW_STR							((SusiId_t)7)
#define SUSI_ID_BOARD_BIOS_FW_STR						((SusiId_t)8)
#define SUSI_ID_BOARD_OEM0_STR							((SusiId_t)0x10)
#define SUSI_ID_BOARD_OEM1_STR							((SusiId_t)0x11)
#define SUSI_ID_BOARD_OEM2_STR							((SusiId_t)0x12)
SusiStatus_t SUSI_API SusiBoardGetStringA(
	SusiId_t Id,		
	char *pBuffer,		
	uint32_t *pBufLen	
    );
SusiStatus_t SUSI_API SusiBoardReadIO(
	uint16_t Port,		
	uint32_t *pValue,	
	uint32_t Length		
	);